--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "nanoforge-loader-server",
-  "version": "1.0.0",
+  "name": "@nanoforge-dev/loader-server",
+  "version": "0.0.2",
   "description": "NanoForge Loader - Server",
   "homepage": "https://github.com/NanoForge-dev/Loader#readme",
   "license": "MIT",
@@ -15,20 +15,26 @@
     "url": ""
   },
   "type": "module",
-  "module": "src/server.ts",
+  "main": "dist/server.js",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/NanoForge-dev/Loader.git",
     "directory": "apps/server"
   },
-  "private": true,
+  "files": [
+    "dist",
+    "package.json",
+    "README.md",
+    "LICENSE"
+  ],
   "scripts": {
     "setup": "bun i",
     "build": "bun run clean && bun run build:raw",
-    "build:raw": "bun build src/index.ts --outdir dist --target browser",
+    "build:raw": "bun build src/server.ts --outdir dist --target bun",
     "clean": "rm -rf dist",
     "dev": "bun src/server.ts --watch",
     "start": "bun dist/index.js",
+    "publish": "npm publish --access public",
     "lint": "eslint . && prettier --check . '!.cloud/**'",
     "fix": "eslint . --fix && prettier --write . '!.cloud/**'",
     "taze": "taze major -w",
@@ -36,8 +42,9 @@
   },
   "dependencies": {
     "cors": "^2.8.5",
-    "express": "^4.21.2",
-    "helmet": "^8.0.0"
+    "express": "^5.1.0",
+    "helmet": "^8.0.0",
+    "serve-static-bun": "^0.5.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.22.0",
