--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -1,8 +1,8 @@
 {
   "$schema": "https://json.schemastore.org/package.json",
-  "name": "@nanoforge-dev/loader-server",
+  "name": "@nanoforge-dev/loader-client",
   "version": "0.0.2",
-  "description": "NanoForge Loader - Server",
+  "description": "NanoForge Loader - Client",
   "homepage": "https://github.com/NanoForge-dev/Loader#readme",
   "bugs": "https://github.com/NanoForge-dev/Loader/issues",
   "license": "MIT",
@@ -39,17 +39,21 @@
   "repository": {
     "type": "git",
     "url": "git+https://github.com/NanoForge-dev/Loader.git",
-    "directory": "apps/server"
+    "directory": "apps/client"
   },
   "funding": "",
   "scripts": {
-    "build": "bun build src/server.ts --outdir dist --target node",
+    "build": "bun build src/server.ts --outdir dist --target bun",
     "start": "bun run dist/server.js",
     "lint": "prettier --check . && eslint --format=pretty src",
     "format": "prettier --write . && eslint --fix --format=pretty src",
     "prepack": "pnpm run build && pnpm run lint",
-    "changelog": "git cliff --prepend ./CHANGELOG.md -u -c ./cliff.toml -r ../../ --include-path 'apps/server/*'",
+    "changelog": "git cliff --prepend ./CHANGELOG.md -u -c ./cliff.toml -r ../../ --include-path 'apps/client/*'",
     "release": "cliff-jumper"
+  },
+  "dependencies": {
+    "@nanoforge-dev/loader-website": "workspace:^",
+    "bun": "^1.3.3"
   },
   "devDependencies": {
     "@favware/cliff-jumper": "^6.0.0",
@@ -57,7 +61,6 @@
     "@nanoforge-dev/utils-prettier-config": "^1.0.0",
     "@trivago/prettier-plugin-sort-imports": "^6.0.0",
     "@types/bun": "^1.3.3",
-    "bun": "^1.3.3",
     "eslint": "^9.39.1",
     "eslint-formatter-pretty": "^7.0.0",
     "prettier": "^3.6.2",
