--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -14,24 +14,23 @@ jobs:
   tests:
     runs-on: ubuntu-latest
     steps:
-      - name: "Checkout"
-        uses: actions/checkout@v2
-        with:
-          fetch-depth: 0
+      - name: Checkout
+        uses: actions/checkout@v5
+
+      - name: "Setup pnpm"
+        uses: pnpm/action-setup@v4
 
       - name: "Setup node"
-        uses: actions/setup-node@v2
+        uses: actions/setup-node@v4
         with:
-          node-version: "23.6.0"
-
-      - name: "Setup bun"
-        uses: oven-sh/setup-bun@v2
+          node-version: 24.11.0
+          cache: "pnpm"
 
       - name: "Install dependencies"
-        run: bun install
+        run: pnpm install
 
-      - name: "Run tests"
-        run: bun lerna run test:unit
+      - name: "Run build"
+        run: pnpm build
 
       - name: "Run linter"
-        run: bun lerna run lint
+        run: pnpm lint
