--- a/apps/website/package.json
+++ b/apps/website/package.json
@@ -41,6 +41,7 @@
     "release": "cliff-jumper"
   },
   "devDependencies": {
+    "@eslint/js": "^9.39.1",
     "@favware/cliff-jumper": "^6.0.0",
     "@html-eslint/eslint-plugin": "^0.35.2",
     "@html-eslint/parser": "^0.35.2",
@@ -50,9 +51,15 @@
     "@types/bun": "^1.3.3",
     "bun": "^1.3.3",
     "eslint": "^9.39.1",
+    "eslint-config-prettier": "^10.1.8",
     "eslint-formatter-pretty": "^7.0.0",
+    "eslint-plugin-format": "^1.0.2",
+    "eslint-plugin-jest": "^29.1.0",
+    "eslint-plugin-prettier": "^5.5.4",
+    "globals": "^16.5.0",
     "prettier": "^3.6.2",
-    "typescript": "^5.9.3"
+    "typescript": "^5.9.3",
+    "typescript-eslint": "^8.47.0"
   },
   "packageManager": "pnpm@10.22.0",
   "engines": {
