--- a/package.json
+++ b/package.json
@@ -29,18 +29,25 @@
   "devDependencies": {
     "@commitlint/cli": "^20.1.0",
     "@commitlint/config-conventional": "^20.0.0",
+    "@eslint/js": "^9.39.1",
     "@nanoforge-dev/utils-eslint-config": "^1.0.0",
     "@nanoforge-dev/utils-prettier-config": "^1.0.0",
     "@trivago/prettier-plugin-sort-imports": "^6.0.0",
     "@types/bun": "^1.3.3",
     "@types/node": "^24.10.1",
     "eslint": "^9.39.1",
+    "eslint-config-prettier": "^10.1.8",
     "eslint-formatter-pretty": "^7.0.0",
+    "eslint-plugin-format": "^1.0.2",
+    "eslint-plugin-jest": "^29.1.0",
+    "eslint-plugin-prettier": "^5.5.4",
+    "globals": "^16.5.0",
     "husky": "^9.1.7",
     "lint-staged": "^16.2.7",
     "prettier": "^3.6.2",
     "turbo": "^2.6.1",
-    "typescript": "^5.9.3"
+    "typescript": "^5.9.3",
+    "typescript-eslint": "^8.47.0"
   },
   "packageManager": "pnpm@10.22.0",
   "engines": {
