--- a/apps/website/package.json
+++ b/apps/website/package.json
@@ -1,10 +1,10 @@
 {
   "$schema": "https://json.schemastore.org/package.json",
-  "name": "@nanoforge-dev/loader",
+  "name": "@nanoforge-dev/loader-website",
   "version": "0.0.0",
-  "description": "NanoForge Loader - Monorepo",
+  "description": "NanoForge Loader - Website",
   "homepage": "https://github.com/NanoForge-dev/Loader#readme",
-  "bugs": "https://github.com/NanoForge-dev/Engine/issues",
+  "bugs": "https://github.com/NanoForge-dev/Loader/issues",
   "license": "MIT",
   "contributors": [
     "Bill <timothe.jacquot@epitech.eu>",
@@ -12,29 +12,44 @@
     "Fexkoser <martin.fillon@epitech.eu>",
     "Tchips <leo.outmizguine@epitech.eu>"
   ],
+  "files": [
+    "dist"
+  ],
+  "main": "./dist/index.html",
+  "module": "./dist/index.html",
+  "exports": {
+    "./*": "./dist/*",
+    "./package.json": "./package.json"
+  },
+  "type": "module",
+  "browser": true,
+  "directories": {
+    "lib": "src"
+  },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/NanoForge-dev/Loader.git"
+    "url": "git+https://github.com/NanoForge-dev/Loader.git",
+    "directory": "apps/website"
   },
   "funding": "",
   "scripts": {
-    "build": "turbo run build --concurrency=5",
-    "format": "prettier --write . && turbo run format --concurrency=5",
-    "lint": "prettier --check . && turbo run lint --concurrency=5",
-    "test:unit": "turbo run test:unit --concurrency=5",
-    "test:e2e": "turbo run test:e2e --concurrency=5",
-    "prepare": "husky",
-    "lint-staged": "lint-staged"
+    "build": "bun build src/index.html --outdir dist --target browser --asset-naming [name].[ext]",
+    "lint": "prettier --check . && eslint --format=pretty src",
+    "format": "prettier --write . && eslint --fix --format=pretty src",
+    "prepack": "pnpm run build && pnpm run lint",
+    "changelog": "git cliff --prepend ./CHANGELOG.md -u -c ./cliff.toml -r ../../ --include-path 'apps/website/*'",
+    "release": "cliff-jumper"
   },
   "devDependencies": {
-    "@commitlint/cli": "^20.1.0",
-    "@commitlint/config-conventional": "^20.0.0",
     "@eslint/js": "^9.39.1",
+    "@favware/cliff-jumper": "^6.0.0",
+    "@html-eslint/eslint-plugin": "^0.35.2",
+    "@html-eslint/parser": "^0.35.2",
     "@nanoforge-dev/utils-eslint-config": "^1.0.0",
     "@nanoforge-dev/utils-prettier-config": "^1.0.0",
     "@trivago/prettier-plugin-sort-imports": "^6.0.0",
     "@types/bun": "^1.3.3",
-    "@types/node": "^24.10.1",
+    "bun": "^1.3.3",
     "eslint": "^9.39.1",
     "eslint-config-prettier": "^10.1.8",
     "eslint-formatter-pretty": "^7.0.0",
@@ -42,10 +57,7 @@
     "eslint-plugin-jest": "^29.1.0",
     "eslint-plugin-prettier": "^5.5.4",
     "globals": "^16.5.0",
-    "husky": "^9.1.7",
-    "lint-staged": "^16.2.7",
     "prettier": "^3.6.2",
-    "turbo": "^2.6.1",
     "typescript": "^5.9.3",
     "typescript-eslint": "^8.47.0"
   },
@@ -53,7 +65,9 @@
   "engines": {
     "node": "24.11.0"
   },
-  "private": true,
+  "publishConfig": {
+    "access": "public"
+  },
   "lint-staged": {
     "**/*.{ts,html,css}": [
       "prettier --write"
@@ -61,5 +75,8 @@
     "src/**/*.{ts,html,css}": [
       "eslint --fix"
     ]
+  },
+  "pnpm": {
+    "neverBuiltDependencies": []
   }
 }
