--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -1,7 +1,7 @@
 {
   "$schema": "https://json.schemastore.org/package.json",
   "name": "@nanoforge-dev/loader-client",
-  "version": "0.0.2",
+  "version": "1.0.0",
   "description": "NanoForge Loader - Client",
   "homepage": "https://github.com/NanoForge-dev/Loader#readme",
   "bugs": "https://github.com/NanoForge-dev/Loader/issues",
@@ -52,7 +52,7 @@
     "release": "cliff-jumper"
   },
   "dependencies": {
-    "@nanoforge-dev/loader-website": "workspace:^",
+    "@nanoforge-dev/loader-website": "^1.0.0",
     "bun": "^1.3.3"
   },
   "devDependencies": {
