--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -44,7 +44,7 @@
   "funding": "",
   "scripts": {
     "build": "bun build src/server.ts --outdir dist --target node",
-    "start": "bun run dist/server.js",
+    "start": "node dist/server.js",
     "lint": "prettier --check . && eslint --format=pretty src",
     "format": "prettier --write . && eslint --fix --format=pretty src",
     "prepack": "pnpm run build && pnpm run lint",
