docs: add documentation to labeler

--- a/.github/labeler.yml
+++ b/.github/labeler.yml
@@ -15,3 +15,9 @@ app:website:
       - any-glob-to-any-file:
           - apps/website/*
           - apps/website/**/*
+
+documentation:
+  - changed-files:
+      - any-glob-to-any-file:
+          - docs/*
+          - docs/**/*
