--- a/.github/issue-labeler.yml
+++ b/.github/issue-labeler.yml
@@ -9,3 +9,6 @@ app:server:
 app:website:
   - "### Which app is this (bug
     report|feature request) for\\?\\n\\nwebsite\\n"
+
+documentation:
+  - "### What is the type of issue?\\n"
