--- a/apps/website/package.json
+++ b/apps/website/package.json
@@ -31,7 +31,7 @@
     "url": "git+https://github.com/NanoForge-dev/Loader.git",
     "directory": "apps/website"
   },
-  "funding": "",
+  "funding": "https://github.com/NanoForge-dev/Loader?sponsor",
   "scripts": {
     "build": "bun build src/index.html --outdir dist --target browser --asset-naming [name].[ext]",
     "lint": "prettier --check . && eslint --format=pretty src",
@@ -41,36 +41,26 @@
     "release": "cliff-jumper"
   },
   "devDependencies": {
-    "@eslint/js": "^9.39.1",
-    "@favware/cliff-jumper": "^6.0.0",
-    "@html-eslint/eslint-plugin": "^0.35.2",
-    "@html-eslint/parser": "^0.35.2",
-    "@nanoforge-dev/utils-eslint-config": "^1.0.0",
-    "@nanoforge-dev/utils-prettier-config": "^1.0.0",
-    "@trivago/prettier-plugin-sort-imports": "^6.0.0",
-    "@types/bun": "^1.3.3",
-    "bun": "^1.3.3",
-    "eslint": "^9.39.1",
-    "eslint-config-prettier": "^10.1.8",
-    "eslint-formatter-pretty": "^7.0.0",
-    "eslint-plugin-format": "^1.0.2",
-    "eslint-plugin-jest": "^29.1.0",
-    "eslint-plugin-prettier": "^5.5.4",
-    "globals": "^16.5.0",
-    "prettier": "^3.6.2",
-    "typescript": "^5.9.3",
-    "typescript-eslint": "^8.47.0"
+    "@favware/cliff-jumper": "catalog:ci",
+    "@nanoforge-dev/utils-eslint-config": "catalog:lint",
+    "@nanoforge-dev/utils-prettier-config": "catalog:lint",
+    "@trivago/prettier-plugin-sort-imports": "catalog:lint",
+    "@types/bun": "catalog:core",
+    "bun": "catalog:core",
+    "eslint": "catalog:lint",
+    "prettier": "catalog:lint",
+    "typescript": "catalog:build"
   },
   "packageManager": "pnpm@10.22.0",
   "engines": {
-    "node": "24.11.0"
+    "node": "25"
   },
   "publishConfig": {
     "access": "public"
   },
   "lint-staged": {
-    "**/*.{ts,html,css}": [
-      "prettier --write"
+    "**": [
+      "prettier --ignore-unknown --write"
     ],
     "src/**/*.{ts,html,css}": [
       "eslint --fix"
