--- a/package.json
+++ b/package.json
@@ -16,50 +16,41 @@
     "type": "git",
     "url": "git+https://github.com/NanoForge-dev/Loader.git"
   },
-  "funding": "",
+  "funding": "https://github.com/NanoForge-dev/Loader?sponsor",
   "scripts": {
     "build": "turbo run build --concurrency=5",
     "format": "prettier --write . && turbo run format --concurrency=5",
     "lint": "prettier --check . && turbo run lint --concurrency=5",
     "test:unit": "turbo run test:unit --concurrency=5",
     "test:e2e": "turbo run test:e2e --concurrency=5",
-    "prepare": "husky",
-    "lint-staged": "lint-staged"
+    "prepare": "husky"
   },
   "devDependencies": {
-    "@commitlint/cli": "^20.1.0",
-    "@commitlint/config-conventional": "^20.0.0",
-    "@eslint/js": "^9.39.1",
-    "@nanoforge-dev/actions": "^1.0.2",
-    "@nanoforge-dev/utils-eslint-config": "^1.0.0",
-    "@nanoforge-dev/utils-prettier-config": "^1.0.0",
-    "@trivago/prettier-plugin-sort-imports": "^6.0.0",
-    "@types/bun": "^1.3.3",
-    "@types/node": "^24.10.1",
-    "eslint": "^9.39.1",
-    "eslint-config-prettier": "^10.1.8",
-    "eslint-formatter-pretty": "^7.0.0",
-    "eslint-plugin-format": "^1.0.2",
-    "eslint-plugin-jest": "^29.1.0",
-    "eslint-plugin-prettier": "^5.5.4",
-    "globals": "^16.5.0",
-    "husky": "^9.1.7",
-    "lint-staged": "^16.2.7",
-    "prettier": "^3.6.2",
-    "turbo": "^2.6.1",
-    "typescript": "^5.9.3",
-    "typescript-eslint": "^8.47.0"
+    "@commitlint/cli": "catalog:ci",
+    "@commitlint/config-conventional": "catalog:ci",
+    "@nanoforge-dev/actions": "catalog:ci",
+    "@nanoforge-dev/utils-eslint-config": "catalog:lint",
+    "@nanoforge-dev/utils-prettier-config": "catalog:lint",
+    "@trivago/prettier-plugin-sort-imports": "catalog:lint",
+    "@types/bun": "catalog:core",
+    "@types/node": "catalog:core",
+    "eslint": "catalog:lint",
+    "husky": "catalog:ci",
+    "lint-staged": "catalog:ci",
+    "prettier": "catalog:lint",
+    "turbo": "catalog:build",
+    "typescript": "catalog:build"
   },
-  "packageManager": "pnpm@10.22.0",
+  "packageManager": "pnpm@10.28.1",
   "engines": {
-    "node": "24.11.0"
+    "node": "25"
   },
   "private": true,
   "lint-staged": {
-    "**/*.{ts,html,css}": [
-      "prettier --write"
+    "**": [
+      "prettier --ignore-unknown --write"
     ],
-    "src/**/*.{ts,html,css}": [
+    "src/**/*.ts": [
       "eslint --fix"
     ]
   }
