--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -4,33 +4,20 @@ on:
   pull_request:
     branches:
       - main
-      - dev
+  push:
+    branches:
+      - main
   workflow_dispatch:
-
-env:
-  EM_CACHE_FOLDER: "emsdk-cache"
 
 jobs:
   tests:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout
-        uses: actions/checkout@v5
+      - name: Checkout repository
+        uses: actions/checkout@v6
 
-      - name: "Setup pnpm"
-        uses: pnpm/action-setup@v4
+      - name: Prepare
+        uses: ./.github/actions/prepare
 
-      - name: "Setup node"
-        uses: actions/setup-node@v4
-        with:
-          node-version: 25
-          cache: "pnpm"
-
-      - name: "Install dependencies"
-        run: pnpm install
-
-      - name: "Run build"
-        run: pnpm build
-
-      - name: "Run linter"
+      - name: Run linter
         run: pnpm lint
