--- a/.prettierignore
+++ b/.prettierignore
@@ -1,14 +1,15 @@
-# Ignore files for PNPM, NPM and YARN
-pnpm-lock.yaml
-package-lock.json
-yarn.lock
-bun.lock
+.idea/
+.vscode/
 
-apps/
+dist/
+node_modules/
+
+pnpm-lock.yaml
+pnpm-workspace.yaml
+
+CHANGELOG.md
+
+coverage/
 
 .turbo/
-node_modules/
-dist/
-coverage/
-CHANGELOG.md
-documentation/
+apps/
